--- a/font/fonts.css
+++ b/font/fonts.css
@@ -9,7 +9,7 @@
         url('NotoSans-Thin.woff2') format('woff2'), 
         url('NotoSans-Thin.woff') format('woff'),
         url('NotoSans-Thin.ttf') format('truetype'),
-        url('NotoSans-Thin.otf') format('opentype'),
+        url('NotoSansCJKkr-Thin.otf') format('opentype'),
         url('NotoSans-Thin.eot') format('embedded-opentype');
 }
 
@@ -22,7 +22,7 @@
         url('NotoSans-Light.woff2') format('woff2'), 
         url('NotoSans-Light.woff') format('woff'),
         url('NotoSans-Light.ttf') format('truetype'),
-        url('NotoSans-Light.otf') format('opentype'),
+        url('NotoSansCJKkr-Light.otf') format('opentype'),
         url('NotoSans-Light.eot') format('embedded-opentype');
 }
 
@@ -34,7 +34,7 @@
         url('NotoSans-DemiLight.woff2') format('woff2'), 
         url('NotoSans-DemiLight.woff') format('woff'),
         url('NotoSans-DemiLight.ttf') format('truetype'),
-        url('NotoSans-DemiLight.otf') format('opentype'),
+        url('NotoSansCJKkr-DemiLight.otf') format('opentype'),
         url('NotoSans-Light.eot') format('embedded-opentype');
 }
 
@@ -46,7 +46,7 @@
         url('NotoSans-Regular.woff2') format('woff2'), 
         url('NotoSans-Regular.woff') format('woff'),
         url('NotoSans-Regular.ttf') format('truetype'),
-        url('NotoSans-Regular.otf') format('opentype'),
+        url('NotoSansCJKkr-Regular.otf') format('opentype'),
         url('NotoSans-Regular.eot') format('embedded-opentype');
 }
 
@@ -58,7 +58,7 @@
         url('NotoSans-Medium.woff2') format('woff2'), 
         url('NotoSans-Medium.woff') format('woff'),
         url('NotoSans-Medium.ttf') format('truetype'),
-        url('NotoSans-Medium.otf') format('opentype'),
+        url('NotoSansCJKkr-Medium.otf') format('opentype'),
         url('NotoSans-Medium.eot') format('embedded-opentype');
 }
 
@@ -70,7 +70,7 @@
         url('NotoSans-Bold.woff2') format('woff2'), 
         url('NotoSans-Bold.woff') format('woff'),
         url('NotoSans-Bold.ttf') format('truetype'),
-        url('NotoSans-Bold.otf') format('opentype'),
+        url('NotoSansCJKkr-Bold.otf') format('opentype'),
         url('NotoSans-Bold.eot') format('embedded-opentype');
 }
 
@@ -82,7 +82,7 @@
         url('NotoSans-Black.woff2') format('woff2'), 
         url('NotoSans-Black.woff') format('woff'),
         url('NotoSans-Black.ttf') format('truetype'),
-        url('NotoSans-Black.otf') format('opentype'),
+        url('NotoSansCJKkr-Black.otf') format('opentype'),
         url('NotoSans-Black.eot') format('embedded-opentype');
 }
 
