--- a/css/sub/buy.css
+++ b/css/sub/buy.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 /*컨텐츠1*/
-.buyCon01{background: url(/aesop/images/sub/mainBg.png) center center;background-size: cover; color: #fff; height: 900px;}
+.buyCon01{background: url(/images/sub/mainBg.png) center center;background-size: cover; color: #fff; height: 900px;}
 .buyCon01 .inner{ position: relative; height: 900px;}
 .buyCon01 img{position: absolute; top:50%; margin-top: -150px}
 
@@ -10,9 +10,9 @@
 .con01Text h2{font-size: 35px; padding-top: 20px; }
 .con01Text p{font-weight: 100; font-size: 18px; padding: 50px 0;}
 
-.con01Info dt{background: url(/aesop/images/sub/square.png) no-repeat 0 50%; padding-left: 20px; margin-bottom: 10}
+.con01Info dt{background: url(/images/sub/square.png) no-repeat 0 50%; padding-left: 20px; margin-bottom: 10}
 .con01Info dd{font-weight: 100; padding-left: 20px; margin-bottom: 20px;}
-.con01Info dd:last-child{background: url(/aesop/images/sub/plus.png) no-repeat 100%; padding-right: 25px;}
+.con01Info dd:last-child{background: url(/images/sub/plus.png) no-repeat 100%; padding-right: 25px;}
 .buyBtn{text-align: center; border: 1px solid #fff; height: 60px; line-height: 60px; margin-top: 80px;
         transition: all 0.2s linear}
 .buyBtn:hover{background: rgba(255,255,255,0.2);}
@@ -41,20 +41,22 @@
                 width: 380px; text-align: center;}
 .con03Text p{font-weight: 100; padding: 30px 0; line-height: 35px;}
 
-.con03Product{text-align: center;''}
-.con03Product li{float: left; position: absolute; }
-.con03Product li:first-child{left: 250; bottom: 150px}
-.con03Product li:last-child{right: 150; bottom: 150px}
-.con03Product .center{bottom: 90px; left: 520px; transition: all 0.3s linear;}
-.con03Product .center:hover{transform: scale(1.1);}
-.con03Product .center img{display: block; margin-bottom: 30px;}
-.con03Product li a{display: block;}
-.con03Product li img{display: inline-block;}
+.con03Product{text-align: center;}
+.con03Product div{opacity: 0.8; height: 600px; }
+.con03Product div a p{display: none;}
+.con03Product div a img{display: inline-block; width: 150px; padding-top:100px;}
 
-.arrow {position: absolute; background: url(/aesop/images/sub/arrow.png) no-repeat; height: 60;
-        width: 30px; text-indent: -9999px; bottom: 400px;}
-.arrow a{display: block;height: 100%;}
-.con03Arrow .arrowL {left: 100px; transition:all 0.5s;}
-.con03Arrow .arrowL:hover{ transform: translate(-30px);}
-.con03Arrow .arrowR {right: 0px; background-position: right; transition:all 0.5s;}
-.con03Arrow .arrowR:hover{transform: translate(30px);}
+.con03Item04{padding-top:220px;}
+
+.con03Product .con03Item02 img{width: 100px;}
+
+.con03Product .slick-center{opacity: 1; }
+.con03Product .slick-center img{transform: scale(1.2);padding-top:100px;;}
+.con03Product .slick-center p{display: block; padding-top: 80px;}
+
+
+.arrow {position: absolute; background: url(/images/sub/arrow.png) no-repeat; height: 60;
+        width: 30px; text-indent: -9999px; bottom: 400px; }
+.arrow a{display: block;height: 100%;cursor: pointer;}
+
+.con03Arrow .arrowR {right: 0px; background-position: right;}
