--- a/css/sub/buy.css
+++ b/css/sub/buy.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 /*컨텐츠1*/
-.buyCon01{background: url(/images/sub/mainBg.png) center center;background-size: cover; color: #fff; height: 900px;}
+.buyCon01{background: url(/aesop/aesop/images/sub/mainBg.png) center center;background-size: cover; color: #fff; height: 900px;}
 .buyCon01 .inner{ position: relative; height: 900px;}
 .buyCon01 img{position: absolute; top:50%; margin-top: -150px}
 
@@ -10,9 +10,9 @@
 .con01Text h2{font-size: 35px; padding-top: 20px; }
 .con01Text p{font-weight: 100; font-size: 18px; padding: 50px 0;}
 
-.con01Info dt{background: url(/images/sub/square.png) no-repeat 0 50%; padding-left: 20px; margin-bottom: 10}
+.con01Info dt{background: url(/aesop/images/sub/square.png) no-repeat 0 50%; padding-left: 20px; margin-bottom: 10}
 .con01Info dd{font-weight: 100; padding-left: 20px; margin-bottom: 20px;}
-.con01Info dd:last-child{background: url(/images/sub/plus.png) no-repeat 100%; padding-right: 25px;}
+.con01Info dd:last-child{background: url(/aesop/images/sub/plus.png) no-repeat 100%; padding-right: 25px;}
 .buyBtn{text-align: center; border: 1px solid #fff; height: 60px; line-height: 60px; margin-top: 80px;
         transition: all 0.2s linear}
 .buyBtn:hover{background: rgba(255,255,255,0.2);}
@@ -51,11 +51,11 @@
 .con03Product .con03Item02 img{width: 100px;}
 
 .con03Product .slick-center{opacity: 1; }
-.con03Product .slick-center img{transform: scale(1.2);padding-top:100px;;}
+.con03Product .slick-center img{transform: scale(1.2);padding-top:100px;transition: all 0.5s;}
 .con03Product .slick-center p{display: block; padding-top: 80px;}
 
 
-.arrow {position: absolute; background: url(/images/sub/arrow.png) no-repeat; height: 60;
+.arrow {position: absolute; background: url(/aesop/images/sub/arrow.png) no-repeat; height: 60;
         width: 30px; text-indent: -9999px; bottom: 400px; }
 .arrow a{display: block;height: 100%;cursor: pointer;}
 
